Closed Bug 618393 Opened 15 years ago Closed 15 years ago

Content processes don't report uptime correctly

Categories

(Toolkit :: Crash Reporting, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
fennec - ---

People

(Reporter: jdm, Assigned: jdm)

Details

Attachments

(1 file, 1 obsolete file)

tracking-fennec: --- → ?
Untested, based off of the code in PluginModuleParent.
jdm, should someone review or offer feedback on this?
Not worth it until I actually see if it works correctly.
Comment on attachment 496973 [details] [diff] [review] Add StartupTime annotation to content crash reports. And in fact it needs to be rebased and won't work as written.
Attachment #496973 - Attachment is obsolete: true
More likely to work, but still untested.
jdm, love to accept, but not blocking fennec. lets get it reviewed and tested.
tracking-fennec: ? → 2.0-
Assignee: nobody → josh
Comment on attachment 497197 [details] [diff] [review] Add StartupTime annotation to content crash reports. Tested, content process crashes now have reasonable uptime fields.
Attachment #497197 - Flags: review?(ted.mielczarek)
Comment on attachment 497197 [details] [diff] [review] Add StartupTime annotation to content crash reports. This looks okay to me, but I think you really want cjones or some other IPC peer to review it, since it's not actually Breakpad code.
Attachment #497197 - Flags: review?(ted.mielczarek) → review?(jones.chris.g)
Comment on attachment 497197 [details] [diff] [review] Add StartupTime annotation to content crash reports. Heh, "IPC peers". This isn't the straw to break the refactorin' camel's back; fine with me.
Attachment #497197 - Flags: review?(jones.chris.g) → review+
Attachment #497197 - Flags: approval2.0+
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: