Bug 618393 - Add StartupTime annotation to content crash reports. r=ted a2.0=dougt